<resources>
    <string name="app_name">PhysicsQuizJava</string>

    <string name="trueString">TRUE</string>
    <string name="falseString">FALSE</string>
    <string name="correct_answer">CORRECT</string>
    <string name="incorrect_answer">INCORRECT</string>

    <string name="next">NEXT</string>
    <string name="prev">PREV</string>


    <string name="cheat">CHEAT</string>
    <string name="reset">RESET</string>
    <string name="showAnswer">SHOW CORRECT ANSWER</string>
    <string name="searchAnswer">Search answer</string>


    <string name="question1">Are you all right?</string>
    <string name="question2">Is it OK with you?</string>
    <string name="question3">Can you touch the correct button?</string>
    <string name="question4">4</string>
    <string name="question5">5</string>

</resources>